<?xml version="1.0"?>
<package format="2">
  <name>octomap_converter</name>
  <version>0.0.0</version>
  <description>The octomap_converter package</description>

  <maintainer email="hiraoka@jsk.mi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>

</package>
